[gd_scene load_steps=18 format=2]

[ext_resource path="res://ui/fabricator_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/visual/menu/industrial_9_square.png" type="Texture" id=2]
[ext_resource path="res://assets/visual/menu/pcb_circle_plus_128_btn.png" type="Texture" id=3]
[ext_resource path="res://assets/visual/menu/drone_plus_128_btn.png" type="Texture" id=4]
[ext_resource path="res://components/crafting_core.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=6]
[ext_resource path="res://assets/visual/menu/health_plus_128_btn.png" type="Texture" id=7]
[ext_resource path="res://assets/visual/menu/btn_click_mask.png" type="BitMap" id=8]

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 4, 4, 224, 224 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 236, 4, 224, 224 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 468, 4, 224, 224 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 4, 4, 224, 224 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 236, 4, 224, 224 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 468, 4, 224, 224 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 4, 4, 224, 224 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 236, 4, 224, 224 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 468, 4, 224, 224 )

[node name="FabricatorMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -656.0
margin_top = -369.0
margin_right = 656.0
margin_bottom = 369.0
theme = ExtResource( 6 )
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Items are crafted here. All items are added to the queue first and then are moved to a core"
}
exp_enabled = false

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1292.0
margin_bottom = 718.0

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1272.0
margin_bottom = 24.0

[node name="FabricatorLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
margin_right = 100.0
margin_bottom = 24.0
text = "Fabricator"

[node name="Body" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 1272.0
margin_bottom = 698.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="CraftingQueue" type="MarginContainer" parent="MarginContainer/VBoxContainer/Body"]
margin_right = 360.0
margin_bottom = 664.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer/Body/CraftingQueue"]
margin_right = 360.0
margin_bottom = 664.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Body/CraftingQueue"]
margin_right = 360.0
margin_bottom = 664.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Body/CraftingQueue/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 348.0
margin_bottom = 652.0

[node name="QueueItemContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Body/CraftingQueue/MarginContainer/ScrollContainer"]
margin_right = 336.0
margin_bottom = 640.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Body"]
margin_left = 370.0
margin_right = 1272.0
margin_bottom = 664.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CraftingCoreContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/Body/VBoxContainer"]
margin_right = 902.0
margin_bottom = 327.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="CraftingCore" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingCoreContainer" instance=ExtResource( 5 )]
margin_right = 298.0
margin_bottom = 327.0

[node name="CraftingCore2" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingCoreContainer" instance=ExtResource( 5 )]
margin_left = 302.0
margin_right = 600.0
margin_bottom = 327.0

[node name="CraftingCore3" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingCoreContainer" instance=ExtResource( 5 )]
margin_left = 604.0
margin_right = 902.0
margin_bottom = 327.0

[node name="CraftingOptions" type="GridContainer" parent="MarginContainer/VBoxContainer/Body/VBoxContainer"]
margin_top = 337.0
margin_right = 902.0
margin_bottom = 664.0
size_flags_vertical = 3
columns = 3

[node name="DroneBtn" type="TextureButton" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingOptions"]
margin_left = 37.0
margin_top = 37.0
margin_right = 261.0
margin_bottom = 261.0
hint_tooltip = "Create new Drone"
size_flags_horizontal = 6
size_flags_vertical = 6
shortcut_in_tooltip = false
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
texture_click_mask = ExtResource( 8 )

[node name="HealthBtn" type="TextureButton" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingOptions"]
margin_left = 339.0
margin_top = 37.0
margin_right = 563.0
margin_bottom = 261.0
hint_tooltip = "Restore +1 Health"
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 3 )
texture_hover = SubResource( 2 )
texture_click_mask = ExtResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="ModBtn" type="TextureButton" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingOptions"]
margin_left = 641.0
margin_top = 37.0
margin_right = 865.0
margin_bottom = 261.0
hint_tooltip = "Random Drone Mod"
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = SubResource( 7 )
texture_pressed = SubResource( 8 )
texture_hover = SubResource( 9 )
texture_click_mask = ExtResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="NewDroneLabel" type="Label" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingOptions"]
margin_top = 303.0
margin_right = 298.0
margin_bottom = 327.0
text = "New Drone"
align = 1
valign = 1

[node name="AddHpLabel" type="Label" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingOptions"]
margin_left = 302.0
margin_top = 303.0
margin_right = 600.0
margin_bottom = 327.0
text = "+1 Health"
align = 1
valign = 1

[node name="NewEnhancementLabel" type="Label" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingOptions"]
margin_left = 604.0
margin_top = 303.0
margin_right = 902.0
margin_bottom = 327.0
text = "Random Enahncement"
align = 1
valign = 1

[node name="HealthPlus128Test" type="Sprite" parent="."]
position = Vector2( 86.1197, 328.333 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
hframes = 3

[node name="HealthPlus128Test2" type="Sprite" parent="."]
position = Vector2( 115, 614.333 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 7 )
hframes = 3

[node name="HealthPlus128Test3" type="Sprite" parent="."]
position = Vector2( 98, 456 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )
hframes = 3

[connection signal="pressed" from="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingOptions/DroneBtn" to="." method="_on_DroneBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingOptions/HealthBtn" to="." method="_on_HealthBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Body/VBoxContainer/CraftingOptions/ModBtn" to="." method="_on_ModBtn_pressed"]
